		the root being added to the universe.  This is necessary because Java3D
		won't allow additions to the scene graph after it's been hooked to the
		universe even if the renderer hasn't started up yet.
	Major modification to ContinuousPortrayal2D, SparsePortrayal2D, HexaSparsePortrayal2D,
		and NetworkPortrayal2D -- all portrayals which can portray elements at negative
		locations.  In many places we were pulling real values down to integers for 
		purposes of discretization.  When we discretized to negative values, this 
		would fail.  So for those Field Portrayals which can deal with negative 
		field locations, we've changed discretization by (int)(... to 
		(int)Math.floor(... to guarantee that the movement is always downwards.
		This enables (among other things) objects to be selected and inspected when
		they're located in certain negative regions.  Irritating that this bug 
		wasn't caught earlier...
	Fix to PacMan: ghosts who were frightened precisely when the game changed to a new
		screen stayed frightened (and in their box) indefinitely.  A rare occurrance
		but a weird one.
	Added toroidal displaying to Continuous2D.  It could in theory be added to
		SparsePortrayal2D as well but is significantly more complex due to (1) the
		fact that SparsePortrayal2D draws its objects by looking up filled locations
		rather than looking up each object in turn and (2) the fact that
		SparsePortrayal2D allows for expicit drawing orders.  Maybe we'll add it later.
	Added setIncrementSeedOnPlay() and getIncrementSeedOnPlay() to Console and to
		SimpleController.  SimpleController in particular now has this value by
		default set to TRUE (Console always had it TRUE by default).
	Updated copyright information
	Added sim.display.RateAdjuster
	Removed sim.app.pacman.RateAdjuster (and changed how it works)
	Added Asteroids
	Added Asteroids to Makefile (oops)
	Tweaks to SimpleController so it doesn't go into infinite recursive loops on quitting